force-app/main/default/objects/Care_Minutes_Summary__c/Care_Minutes_Summary__c.object-meta.xml
<CustomObject>
    <label>Care Minutes Summary</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Care Minutes Summary Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Minutes Summary</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>