force-app/main/default/objects/Care_Minutes_Summary__c/fields/Actual_Care_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Care_Minutes__c</fullName>
    <label>Actual Care Minutes</label>
    <summarizedField>SRQI_Care_Minutes_Actual__c.Average_Actual_Care_Minutes_per_day__c</summarizedField>
    <summaryForeignKey>SRQI_Care_Minutes_Actual__c.Care_Minutes_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>