force-app/main/default/objects/Care_Minutes_Summary__c/fields/Actual_Registered_Nursing_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Registered_Nursing_Minutes__c</fullName>
    <label>Actual Registered Nursing Minutes</label>
    <summarizedField>SRQI_Care_Minutes_Actual__c.Avg_Actual_Registered_Nurs_Mins_per_day__c</summarizedField>
    <summaryForeignKey>SRQI_Care_Minutes_Actual__c.Care_Minutes_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>