force-app/main/default/objects/Care_Minutes_Summary__c/fields/Algorithm_Version__c.field-meta.xml
<CustomField>
    <fullName>Algorithm_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Algorithm Version</label>
    <referenceTo>ExpressionSetVersion</referenceTo>
    <relationshipLabel>Care Minutes Summary</relationshipLabel>
    <relationshipName>Care_Minutes_Summary_del</relationshipName>
    <type>Lookup</type>
</CustomField>