force-app/main/default/objects/Care_Minutes_Summary__c/fields/Available_Bed_Days__c.field-meta.xml
<CustomField>
    <fullName>Available_Bed_Days__c</fullName>
    <label>Available Bed Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>