force-app/main/default/objects/Care_Minutes_Summary__c/fields/AvgRegNurseAndPersCMComparisonWithTarget__c.field-meta.xml
<CustomField>
    <fullName>AvgRegNurseAndPersCMComparisonWithTarget__c</fullName>
    <formula>Total_Care_Minutes_Target__c - Actual_Care_Minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AvgRegNurseAndPersCMComparisonWithTarget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>