force-app/main/default/objects/Care_Minutes_Summary__c/fields/AvgRegNurseCMComparisonWithTarget__c.field-meta.xml
<CustomField>
    <fullName>AvgRegNurseCMComparisonWithTarget__c</fullName>
    <formula>Registered_Nurse_Care_Minutes_Target__c - Actual_Registered_Nursing_Minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AvgRegNurseCMComparisonWithTarget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>