force-app/main/default/objects/Care_Minutes_Summary__c/fields/Care_Minutes_Rating__c.field-meta.xml
<CustomField>
    <fullName>Care_Minutes_Rating__c</fullName>
    <description>Care Minutes number rating, out of 5</description>
    <label>Care Minutes Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>