force-app/main/default/objects/Care_Minutes_Summary__c/fields/Care_Minutes_Rating_Label__c.field-meta.xml
<CustomField>
    <fullName>Care_Minutes_Rating_Label__c</fullName>
    <formula>IF(Care_Minutes_Rating__c = 0 &amp;&amp; Rating_Exemption_Granted__c = true, &quot;No rating available&quot;,
IF(Care_Minutes_Rating__c = 1, &quot;Significant Improvement Needed&quot;,
IF(Care_Minutes_Rating__c = 2, &quot;Improvement Needed&quot;,
IF(Care_Minutes_Rating__c = 3, &quot;Acceptable&quot;,
IF(Care_Minutes_Rating__c = 4, &quot;Good&quot;,
IF(Care_Minutes_Rating__c = 5, &quot;Excellent&quot;,
&quot;No rating available&quot;
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Minutes Rating Label</label>
    <type>Text</type>
</CustomField>