force-app/main/default/objects/Care_Minutes_Summary__c/fields/Care_Minutes_Stars__c.field-meta.xml
<CustomField>
    <fullName>Care_Minutes_Stars__c</fullName>
    <formula>IMAGE(
IF(Care_Minutes_Rating__c  = 1, &quot;/img/samples/stars_100.gif&quot;,
IF(Care_Minutes_Rating__c  = 2, &quot;/img/samples/stars_200.gif&quot;,
IF(Care_Minutes_Rating__c  = 3, &quot;/img/samples/stars_300.gif&quot;,
IF(Care_Minutes_Rating__c  = 4, &quot;/img/samples/stars_400.gif&quot;,
IF(Care_Minutes_Rating__c  = 5, &quot;/img/samples/stars_500.gif&quot;, &quot;/img/samples/stars_000.gif&quot;
))))),
&quot;Care Minutes Rating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Minutes Stars</label>
    <type>Text</type>
</CustomField>