force-app/main/default/objects/Care_Minutes_Summary__c/fields/CMS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CMS_External_ID__c</fullName>
    <description>provider id-service id-reporting period id
(Oracle ID-Oracle Service ID-reporting period id)</description>
    <externalId>true</externalId>
    <label>CMS External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>