force-app/main/default/objects/Care_Minutes_Summary__c/fields/Late_Submission__c.field-meta.xml
<CustomField>
    <fullName>Late_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked during calculation/recalculation to indicate the submission was late and this is the reason for a 1 Star Rating</description>
    <label>Late Submission</label>
    <type>Checkbox</type>
</CustomField>