force-app/main/default/objects/Care_Minutes_Summary__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Care Minutes Summary</relationshipLabel>
    <relationshipName>Care_Minutes_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>