force-app/main/default/objects/Care_Minutes_Summary__c/fields/Registered_Nurse_Care_Minutes_Target__c.field-meta.xml
<CustomField>
    <fullName>Registered_Nurse_Care_Minutes_Target__c</fullName>
    <label>Registered Nurse Care Minutes Target</label>
    <summarizedField>SRQI_Care_Minutes_Target__c.Registered_Nurse_Care_Minutes_Target__c</summarizedField>
    <summaryForeignKey>SRQI_Care_Minutes_Target__c.Care_Minutes_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>