force-app/main/default/objects/Care_Minutes_Summary__c/fields/Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Period</label>
    <referenceTo>Reporting_Period__c</referenceTo>
    <relationshipLabel>Care Minutes Summary</relationshipLabel>
    <relationshipName>Care_Minutes_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>