force-app/main/default/objects/Care_Minutes_Summary__c/fields/RN_Care_Mins_Actual_versus_Target_Ratio__c.field-meta.xml
<CustomField>
    <fullName>RN_Care_Mins_Actual_versus_Target_Ratio__c</fullName>
    <label>RN Care Mins Actual versus Target Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>