force-app/main/default/objects/Care_Minutes_Summary__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Care Minutes Summary</relationshipLabel>
    <relationshipName>Care_Minutes_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>