force-app/main/default/objects/Care_Minutes_Summary__c/fields/Service_Account__c.field-meta.xml
<CustomField>
    <fullName>Service_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Account</label>
    <referenceTo>Service_Account_Relationship__c</referenceTo>
    <relationshipLabel>Care Minutes Summary</relationshipLabel>
    <relationshipName>Care_Minutes_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>