force-app/main/default/objects/Care_Minutes_Summary__c/fields/Total_Care_Mins_Actual_vs_Target_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Total_Care_Mins_Actual_vs_Target_Ratio__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Care Mins Actual vs Target Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>