force-app/main/default/objects/Care_Minutes_Summary__c/fields/Total_Care_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Care_Minutes__c</fullName>
    <label>Total Care Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>