force-app/main/default/objects/Care_Minutes_Summary__c/fields/Total_Care_Minutes_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Care_Minutes_Target__c</fullName>
    <label>Total Care Minutes Target</label>
    <summarizedField>SRQI_Care_Minutes_Target__c.Average_Care_Minutes_Target__c</summarizedField>
    <summaryForeignKey>SRQI_Care_Minutes_Target__c.Care_Minutes_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>